feat(user_activation): Implemented user activation with the token verification
